# OpenCV_Code

./: .gitignore
ROI图像叠加&图像混合_02/: CMakeLists.txt  Demo.cpp
opencv的遍历方式_01/: Demo.cpp
